from datetime import date
from typing import Any, Dict, List, Optional

from sqlalchemy import Column, ForeignKey, Integer
from sqlmodel import JSON, Field, Relationship, SQLModel


class BaseSQLModel(SQLModel):
    __abstract__ = True
    __table_args__ = {"extend_existing": True}

class Company(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    lines: List["Line"] = Relationship(back_populates="company")
    items: List["Item"] = Relationship(back_populates="company")

class Line(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True)
    company_id: Optional[int] = Field(default=None, foreign_key="company.id")
    company: Optional[Company] = Relationship(back_populates="lines")
    items: List["Item"] = Relationship(back_populates="line")

class Series(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    items: List["Item"] = Relationship(back_populates="series")

class ItemType(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    items: List["Item"] = Relationship(back_populates="type")

class Category(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    items: List["Item"] = Relationship(back_populates="category")

class Vendor(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    purchases: List["Purchase"] = Relationship(back_populates="vendor")


class Collection(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str
    user_id: Optional[int] = Field(default=None, index=True)
    purchases: List["Purchase"] = Relationship(back_populates="collection")


class Faction(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    characters: List["Character"] = Relationship(back_populates="faction")

class Team(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    character_links: List["CharacterTeam"] = Relationship(back_populates="team")

class Character(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    faction_id: Optional[int] = Field(default=None, foreign_key="faction.id")
    faction: Optional[Faction] = Relationship(back_populates="characters")
    aliases: Optional[str] = None

    team_links: List["CharacterTeam"] = Relationship(back_populates="character")
    item_links: List["ItemCharacter"] = Relationship(back_populates="character")

class CharacterTeam(BaseSQLModel, table=True):
    character_id: int = Field(foreign_key="character.id", primary_key=True)
    team_id: int = Field(foreign_key="team.id", primary_key=True)
    character: Character = Relationship(back_populates="team_links")
    team: Team = Relationship(back_populates="character_links")

class Tag(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True, unique=True)
    item_links: List["ItemTag"] = Relationship(back_populates="tag")

class ItemTag(BaseSQLModel, table=True):
    item_id: int = Field(foreign_key="item.id", primary_key=True)
    tag_id: int = Field(foreign_key="tag.id", primary_key=True)
    tag: Tag = Relationship(back_populates="item_links")
    item: "Item" = Relationship(back_populates="tag_links")

class Item(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    name: str = Field(index=True)
    sku: Optional[str] = Field(default=None, index=True)
    version: Optional[str] = None
    year: Optional[int] = Field(default=None, index=True)
    scale: Optional[str] = Field(default=None, index=True)
    condition: Optional[str] = Field(default=None, index=True)
    status: Optional[str] = Field(default="Owned", index=True)
    location: Optional[str] = Field(default=None, index=True)
    url: Optional[str] = None
    notes: Optional[str] = None
    extra: Optional[Dict[str, Any]] = Field(default=None, sa_type=JSON)

    company_id: Optional[int] = Field(default=None, foreign_key="company.id")
    line_id: Optional[int] = Field(default=None, foreign_key="line.id")
    series_id: Optional[int] = Field(default=None, foreign_key="series.id")
    type_id: Optional[int] = Field(default=None, foreign_key="itemtype.id")
    category_id: Optional[int] = Field(default=None, foreign_key="category.id")

    company: Optional[Company] = Relationship(back_populates="items")
    line: Optional[Line] = Relationship(back_populates="items")
    series: Optional[Series] = Relationship(back_populates="items")
    type: Optional[ItemType] = Relationship(back_populates="items")
    category: Optional[Category] = Relationship(back_populates="items")

    character_links: List["ItemCharacter"] = Relationship(back_populates="item")
    purchases: List["Purchase"] = Relationship(back_populates="item")
    tag_links: List[ItemTag] = Relationship(back_populates="item")

class ItemCharacter(BaseSQLModel, table=True):
    item_id: int = Field(foreign_key="item.id", primary_key=True)
    character_id: int = Field(foreign_key="character.id", primary_key=True)
    is_primary: bool = Field(default=False)
    role: Optional[str] = None
    item: Item = Relationship(back_populates="character_links")
    character: Character = Relationship(back_populates="item_links")

class Purchase(BaseSQLModel, table=True):
    id: Optional[int] = Field(default=None, primary_key=True)
    item_id: int = Field(foreign_key="item.id")
    vendor_id: Optional[int] = Field(default=None, foreign_key="vendor.id")
    order_date: Optional[date] = Field(default=None, index=True)
    purchase_date: Optional[date] = None
    ship_date: Optional[date] = Field(default=None, index=True)
    price: Optional[float] = None
    tax: Optional[float] = None
    shipping: Optional[float] = None
    currency: Optional[str] = None
    order_number: Optional[str] = None
    notes: Optional[str] = None
    quantity: int = Field(default=1, sa_column=Column("qty", Integer, default=1))
    collection_id: Optional[int] = Field(
        default=None,
        sa_column=Column(
            "collection_id",
            Integer,
            ForeignKey("collection.id"),
            nullable=True,
        ),
    )

    item: Item = Relationship(back_populates="purchases")
    vendor: Optional[Vendor] = Relationship(back_populates="purchases")
    collection: Optional[Collection] = Relationship(back_populates="purchases")
